Prevent lists from taking on smaller font.

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -107,7 +107,7 @@ main {
 .site-section {
   margin-bottom: px-to-rem(70px);
 
-  p {
+  p, li {
     font-size: px-to-rem(18px);
   }
 
